deploy: 0669cda3f4d153633741872cf2fe66fa0c43729b

--- a/core/genindex.html
+++ b/core/genindex.html
@@ -214,6 +214,8 @@
 </li>
         <li><a href="syntax/types.html#index-11">limits</a>, <a href="valid/types.html#index-13">[1]</a>
 </li>
+        <li><a href="syntax/conventions.html#index-2">list</a>
+</li>
         <li><a href="syntax/modules.html#index-3">local</a>, <a href="valid/modules.html#index-2">[1]</a>
 </li>
         <li><a href="syntax/modules.html#index-1">local index</a>
@@ -296,7 +298,7 @@
 </li>
         <li><a href="syntax/types.html#index-5">value type</a>, <a href="valid/conventions.html#index-1">[1]</a>, <a href="valid/types.html#index-10">[2]</a>, <a href="valid/types.html#index-4">[3]</a>
 </li>
-        <li><a href="syntax/conventions.html#index-2">vector</a>, <a href="syntax/values.html#index-4">[1]</a>
+        <li><a href="syntax/values.html#index-4">vector</a>
 </li>
         <li><a href="valid/types.html#index-1">vector type</a>
 </li>
@@ -461,6 +463,8 @@
 </li>
         <li><a href="binary/types.html#index-11">limits</a>
 </li>
+        <li><a href="binary/conventions.html#index-2">list</a>
+</li>
         <li><a href="binary/modules.html#index-12">local</a>
 </li>
         <li><a href="binary/modules.html#index-0">local index</a>
@@ -520,8 +524,6 @@
         <li><a href="binary/values.html#index-0">value</a>
 </li>
         <li><a href="binary/types.html#index-5">value type</a>
-</li>
-        <li><a href="binary/conventions.html#index-2">vector</a>
 </li>
         <li><a href="binary/types.html#index-2">vector type</a>
 </li>
@@ -1321,6 +1323,16 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="intro/overview.html#index-0">linear memory</a>
 </li>
+      <li><a href="syntax/conventions.html#index-2"><strong>list</strong></a>, <a href="binary/conventions.html#index-2">[1]</a>, <a href="binary/instructions.html#index-1">[2]</a>, <a href="exec/instructions.html#index-8">[3]</a>, <a href="syntax/instructions.html#index-9">[4]</a>, <a href="syntax/modules.html#index-7">[5]</a>, <a href="syntax/modules.html#index-8">[6]</a>, <a href="syntax/types.html#index-6">[7]</a>, <a href="syntax/types.html#index-7">[8]</a>, <a href="text/conventions.html#index-4">[9]</a>, <a href="text/instructions.html#index-2">[10]</a>, <a href="valid/instructions.html#index-11">[11]</a>
+
+      <ul>
+        <li><a href="syntax/conventions.html#index-2">abstract syntax</a>
+</li>
+        <li><a href="binary/conventions.html#index-2">binary format</a>
+</li>
+        <li><a href="text/conventions.html#index-4">text format</a>
+</li>
+      </ul></li>
       <li><a href="binary/values.html#index-3">little endian</a>, <a href="exec/numerics.html#index-5">[1]</a>, <a href="syntax/instructions.html#index-8">[2]</a>
 </li>
       <li><a href="syntax/modules.html#index-3"><strong>local</strong></a>, <a href="appendix/changes.html#index-11">[1]</a>, <a href="appendix/changes.html#index-9">[2]</a>, <a href="appendix/custom.html#index-5">[3]</a>, <a href="appendix/implementation.html#index-1">[4]</a>, <a href="appendix/properties.html#index-22">[5]</a>, <a href="binary/modules.html#index-12">[6]</a>, <a href="exec/runtime.html#index-15">[7]</a>, <a href="syntax/instructions.html#index-6">[8]</a>, <a href="syntax/modules.html#index-1">[9]</a>, <a href="text/modules.html#index-3">[10]</a>, <a href="valid/conventions.html#index-5">[11]</a>, <a href="valid/conventions.html#index-6">[12]</a>, <a href="valid/modules.html#index-1">[13]</a>, <a href="valid/modules.html#index-2">[14]</a>
@@ -1991,6 +2003,8 @@
 </li>
         <li><a href="text/types.html#index-10">limits</a>
 </li>
+        <li><a href="text/conventions.html#index-4">list</a>
+</li>
         <li><a href="text/modules.html#index-3">local</a>
 </li>
         <li><a href="text/modules.html#index-0">local index</a>
@@ -2050,8 +2064,6 @@
         <li><a href="text/values.html#index-0">value</a>
 </li>
         <li><a href="text/types.html#index-5">value type</a>
-</li>
-        <li><a href="text/conventions.html#index-4">vector</a>
 </li>
         <li><a href="text/types.html#index-2">vector type</a>
 </li>
@@ -2308,14 +2320,11 @@
 </li>
       <li><a href="binary/instructions.html#index-4">variable instructions</a>, <a href="exec/instructions.html#index-5">[1]</a>, <a href="text/instructions.html#index-5">[2]</a>, <a href="valid/instructions.html#index-8">[3]</a>
 </li>
-      <li><a href="syntax/conventions.html#index-2"><strong>vector</strong></a>, <a href="binary/conventions.html#index-2">[1]</a>, <a href="binary/instructions.html#index-1">[2]</a>, <a href="exec/instructions.html#index-8">[3]</a>, <a href="syntax/instructions.html#index-9">[4]</a>, <a href="syntax/modules.html#index-7">[5]</a>, <a href="syntax/modules.html#index-8">[6]</a>, <a href="syntax/types.html#index-7">[7]</a>, <a href="text/conventions.html#index-4">[8]</a>, <a href="text/instructions.html#index-2">[9]</a>, <a href="valid/instructions.html#index-11">[10]</a>
+      <li>
+    vector
 
       <ul>
-        <li><a href="syntax/conventions.html#index-2">abstract syntax</a>, <a href="syntax/values.html#index-4">[1]</a>
-</li>
-        <li><a href="binary/conventions.html#index-2">binary format</a>
-</li>
-        <li><a href="text/conventions.html#index-4">text format</a>
+        <li><a href="syntax/values.html#index-4">abstract syntax</a>
 </li>
       </ul></li>
       <li><a href="syntax/instructions.html#index-2"><strong>vector instruction</strong></a>, <a href="binary/instructions.html#index-8">[1]</a>, <a href="exec/instructions.html#index-3">[2]</a>, <a href="text/instructions.html#index-9">[3]</a>, <a href="valid/instructions.html#index-6">[4]</a>
