--- a/core/syntax/conventions.html
+++ b/core/syntax/conventions.html
@@ -138,7 +138,7 @@ This implicitly expresses a form of mapping syntactic constructions over a seque
 <div class="math notranslate nohighlight">
 \[\begin{split}\begin{array}{&#64;{}l&#64;{}rrl&#64;{}l&#64;{}}
 &amp; {\mathit{r}} &amp;::=&amp; \{\; \begin{array}[t]{&#64;{}l&#64;{}l&#64;{}}
-{\mathsf{field}}_{1}~{\mathit{A}}_{{1}},\; {\mathsf{field}}_{2}~{\mathit{A}}_{{2}},\; {}~\dots \;\}\end{array} \\
+{\mathsf{field}}_{1}~\,{\mathit{A}}_{{1}},\; {\mathsf{field}}_{2}~\,{\mathit{A}}_{{2}},\; {}~\,\dots \;\}\end{array} \\
 \end{array}\end{split}\]</div>
 <p>The following notation is adopted for manipulating such records:</p>
 <ul>
@@ -147,20 +147,20 @@ This implicitly expresses a form of mapping syntactic constructions over a seque
 except that the contents of the <span class="math notranslate nohighlight">\(\mathsf{field}\)</span> component is replaced with <span class="math notranslate nohighlight">\({\mathit{A}}\)</span>.</p></li>
 <li><p><span class="math notranslate nohighlight">\({\mathit{r}}{}[\mathsf{field} = { .. }\;{{\mathit{A}}^{{\mathit{n}}}}]\)</span> denotes the same record as <span class="math notranslate nohighlight">\({\mathit{r}}\)</span>,
 except that <span class="math notranslate nohighlight">\({{\mathit{A}}^{{\mathit{n}}}}\)</span> is appended to the sequence of the <span class="math notranslate nohighlight">\(\mathsf{field}\)</span> component,
-i.e, it is short for <span class="math notranslate nohighlight">\({\mathit{r}}{}[\mathsf{field} = {\mathit{r}}.\mathsf{field}~{{\mathit{A}}^{{\mathit{n}}}}]\)</span>.</p></li>
+i.e, it is short for <span class="math notranslate nohighlight">\({\mathit{r}}{}[\mathsf{field} = {\mathit{r}}.\mathsf{field}~\,{{\mathit{A}}^{{\mathit{n}}}}]\)</span>.</p></li>
 <li><p><span class="math notranslate nohighlight">\({\mathit{r}}_{{1}} \oplus {\mathit{r}}_{{2}}\)</span> denotes the composition of two records with the same fields of sequences by appending each sequence point-wise:</p>
 <div class="math notranslate nohighlight">
 \[\{ \begin{array}[t]{&#64;{}l&#64;{}}
-{\mathsf{field}}_{1}~{{\mathit{A}}_{{1}}^\ast},\; {\mathsf{field}}_{2}~{{\mathit{A}}_{{2}}^\ast},\; {}~\dots \}\end{array}~\oplus~\{ \begin{array}[t]{&#64;{}l&#64;{}}
-{\mathsf{field}}_{1}~{{\mathit{B}}_{{1}}^\ast},\; {\mathsf{field}}_{2}~{{\mathit{B}}_{{2}}^\ast},\; {}~\dots \}\end{array}~=~\{ \begin{array}[t]{&#64;{}l&#64;{}}
-{\mathsf{field}}_{1}~{{\mathit{A}}_{{1}}^\ast}~{{\mathit{B}}_{{1}}^\ast},\; {\mathsf{field}}_{2}~{{\mathit{A}}_{{2}}^\ast}~{{\mathit{B}}_{{2}}^\ast},\; {}~\dots \}\end{array}\]</div>
+{\mathsf{field}}_{1}~\,{{\mathit{A}}_{{1}}^\ast},\; {\mathsf{field}}_{2}~\,{{\mathit{A}}_{{2}}^\ast},\; {}~\,\dots \}\end{array}~\,\oplus~\,\{ \begin{array}[t]{&#64;{}l&#64;{}}
+{\mathsf{field}}_{1}~\,{{\mathit{B}}_{{1}}^\ast},\; {\mathsf{field}}_{2}~\,{{\mathit{B}}_{{2}}^\ast},\; {}~\,\dots \}\end{array}~\,=~\,\{ \begin{array}[t]{&#64;{}l&#64;{}}
+{\mathsf{field}}_{1}~\,{{\mathit{A}}_{{1}}^\ast}~\,{{\mathit{B}}_{{1}}^\ast},\; {\mathsf{field}}_{2}~\,{{\mathit{A}}_{{2}}^\ast}~\,{{\mathit{B}}_{{2}}^\ast},\; {}~\,\dots \}\end{array}\]</div>
 </li>
 <li><p><span class="math notranslate nohighlight">\({ \bigoplus }\;{{\mathit{r}}^\ast}\)</span> denotes the composition of a sequence of records, respectively; if the sequence is empty, then all fields of the resulting record are empty.</p></li>
 </ul>
-<p>The update notation for sequences and records generalizes recursively to nested components accessed by “paths” <span class="math notranslate nohighlight">\(\begin{array}{&#64;{}l&#64;{}r&#64;{~}r&#64;{~}l&#64;{}l&#64;{}} &amp; {\mathit{pth}} &amp;::=&amp; {({}[{\mathit{i}}]~\mid~{}.\mathsf{field})^{+}} \\ \end{array}\)</span>:</p>
+<p>The update notation for sequences and records generalizes recursively to nested components accessed by “paths” <span class="math notranslate nohighlight">\(\begin{array}{&#64;{}l&#64;{}r&#64;{~}r&#64;{~}l&#64;{}l&#64;{}} &amp; {\mathit{pth}} &amp;::=&amp; {({}[{\mathit{i}}]~\,\mid~\,{}.\mathsf{field})^{+}} \\ \end{array}\)</span>:</p>
 <ul class="simple">
-<li><p><span class="math notranslate nohighlight">\({\mathit{s}}{}[{}[{\mathit{i}}]~{\mathit{pth}} = {\mathit{A}}]\)</span> is short for <span class="math notranslate nohighlight">\({\mathit{s}}{}[{}[{\mathit{i}}] = ({\mathit{s}}{}[{\mathit{i}}]{}[{\mathit{pth}} = {\mathit{A}}])]\)</span>,</p></li>
-<li><p><span class="math notranslate nohighlight">\({\mathit{r}}{}[\mathsf{field}~{\mathit{pth}} = {\mathit{A}}]\)</span> is short for <span class="math notranslate nohighlight">\({\mathit{r}}{}[\mathsf{field} = ({\mathit{s}}.\mathsf{field}{}[{\mathit{pth}} = {\mathit{A}}])]\)</span>,</p></li>
+<li><p><span class="math notranslate nohighlight">\({\mathit{s}}{}[{}[{\mathit{i}}]~\,{\mathit{pth}} = {\mathit{A}}]\)</span> is short for <span class="math notranslate nohighlight">\({\mathit{s}}{}[{}[{\mathit{i}}] = ({\mathit{s}}{}[{\mathit{i}}]{}[{\mathit{pth}} = {\mathit{A}}])]\)</span>,</p></li>
+<li><p><span class="math notranslate nohighlight">\({\mathit{r}}{}[\mathsf{field}~\,{\mathit{pth}} = {\mathit{A}}]\)</span> is short for <span class="math notranslate nohighlight">\({\mathit{r}}{}[\mathsf{field} = ({\mathit{s}}.\mathsf{field}{}[{\mathit{pth}} = {\mathit{A}}])]\)</span>,</p></li>
 </ul>
 <p>where <span class="math notranslate nohighlight">\({\mathit{r}}{}[{}.\mathsf{field} = {\mathit{A}}]\)</span> is shortened to <span class="math notranslate nohighlight">\({\mathit{r}}{}[\mathsf{field} = {\mathit{A}}]\)</span>.</p>
 </section>
