--- a/core/syntax/instructions.html
+++ b/core/syntax/instructions.html
@@ -117,7 +117,7 @@ These operations closely match respective operations available in hardware.</p>
 &amp; {{\mathit{unop}}}_{{\mathsf{f}}{{\mathit{n}}}} &amp;::=&amp; \mathsf{abs} ~|~ \mathsf{neg} ~|~ \mathsf{sqrt} ~|~ \mathsf{ceil} ~|~ \mathsf{floor} ~|~ \mathsf{trunc} ~|~ \mathsf{nearest} \\[0.8ex]
 &amp; {{\mathit{binop}}}_{{\mathsf{i}}{{\mathit{n}}}} &amp;::=&amp; \mathsf{add} ~|~ \mathsf{sub} ~|~ \mathsf{mul} ~|~ {\mathsf{div\_}}{{\mathit{sx}}} ~|~ {\mathsf{rem\_}}{{\mathit{sx}}} \\ &amp;&amp;|&amp;
 \mathsf{and} ~|~ \mathsf{or} ~|~ \mathsf{xor} ~|~ \mathsf{shl} ~|~ {\mathsf{shr\_}}{{\mathit{sx}}} ~|~ \mathsf{rotl} ~|~ \mathsf{rotr} \\
-&amp; {{\mathit{binop}}}_{{\mathsf{f}}{{\mathit{n}}}} &amp;::=&amp; \mathsf{add} ~|~ \mathsf{sub} ~|~ \mathsf{mul} ~|~ \mathsf{div} ~|~ \mathsf{min} ~|~ \mathsf{max} ~|~ \mathsf{copysign} \\[0.8ex]
+&amp; {{\mathit{binop}}}_{{\mathsf{f}}{{\mathit{n}}}} &amp;::=&amp; \mathsf{add} ~|~ \mathsf{sub} ~|~ \mathsf{mul} ~|~ \mathsf{div} ~|~ {{\mathsf{min}}{\mathsf{\_}}}{{\mathit{sx}}} ~|~ {{\mathsf{max}}{\mathsf{\_}}}{{\mathit{sx}}} ~|~ \mathsf{copysign} \\[0.8ex]
 &amp; {{\mathit{testop}}}_{{\mathsf{i}}{{\mathit{n}}}} &amp;::=&amp; \mathsf{eqz} \\[0.8ex]
 &amp; {{\mathit{relop}}}_{{\mathsf{i}}{{\mathit{n}}}} &amp;::=&amp; \mathsf{eq} ~|~ \mathsf{ne} ~|~ {\mathsf{lt\_}}{{\mathit{sx}}} ~|~ {\mathsf{gt\_}}{{\mathit{sx}}} ~|~ {\mathsf{le\_}}{{\mathit{sx}}} ~|~ {\mathsf{ge\_}}{{\mathit{sx}}} \\
 &amp; {{\mathit{relop}}}_{{\mathsf{f}}{{\mathit{n}}}} &amp;::=&amp; \mathsf{eq} ~|~ \mathsf{ne} ~|~ \mathsf{lt} ~|~ \mathsf{gt} ~|~ \mathsf{le} ~|~ \mathsf{ge} \\[0.8ex]
@@ -187,9 +187,9 @@ For the other integer instructions, the use of two’s complement for the signed
 &amp; {{\mathit{vunop}}}_{{\mathsf{f}}{{\mathit{n}}}~\,\mathsf{x}~\,{\mathit{N}}} &amp;::=&amp; \mathsf{abs} ~|~ \mathsf{neg} ~|~ \mathsf{sqrt} ~|~ \mathsf{ceil} ~|~ \mathsf{floor} ~|~ \mathsf{trunc} ~|~ \mathsf{nearest} \\[0.8ex]
 &amp; {{\mathit{vbinop}}}_{{\mathsf{i}}{{\mathit{n}}}~\,\mathsf{x}~\,{\mathit{N}}} &amp;::=&amp; \mathsf{add} \\ &amp;&amp;|&amp;
 \mathsf{sub} \\ &amp;&amp;|&amp;
-\mathsf{add\_sat}~\,{\mathit{sx}} &amp;\quad
+{{\mathsf{add\_sat}}{\mathsf{\_}}}{{\mathit{sx}}} &amp;\quad
   \mbox{if}~{|{\mathsf{i}}{{\mathit{n}}}|} \leq 16 \\ &amp;&amp;|&amp;
-\mathsf{sub\_sat}~\,{\mathit{sx}} &amp;\quad
+{{\mathsf{sub\_sat}}{\mathsf{\_}}}{{\mathit{sx}}} &amp;\quad
   \mbox{if}~{|{\mathsf{i}}{{\mathit{n}}}|} \leq 16 \\ &amp;&amp;|&amp;
 \mathsf{mul} &amp;\quad
   \mbox{if}~{|{\mathsf{i}}{{\mathit{n}}}|} \geq 16 \\ &amp;&amp;|&amp;
@@ -197,11 +197,11 @@ For the other integer instructions, the use of two’s complement for the signed
   \mbox{if}~{|{\mathsf{i}}{{\mathit{n}}}|} \leq 16 \\ &amp;&amp;|&amp;
 \mathsf{q{\scriptstyle15}mulr\_sat\_s} &amp;\quad
   \mbox{if}~{|{\mathsf{i}}{{\mathit{n}}}|} = 16 \\ &amp;&amp;|&amp;
-\mathsf{min}~\,{\mathit{sx}} &amp;\quad
+{{\mathsf{min}}{\mathsf{\_}}}{{\mathit{sx}}} &amp;\quad
   \mbox{if}~{|{\mathsf{i}}{{\mathit{n}}}|} \leq 32 \\ &amp;&amp;|&amp;
-\mathsf{max}~\,{\mathit{sx}} &amp;\quad
+{{\mathsf{max}}{\mathsf{\_}}}{{\mathit{sx}}} &amp;\quad
   \mbox{if}~{|{\mathsf{i}}{{\mathit{n}}}|} \leq 32 \\
-&amp; {{\mathit{vbinop}}}_{{\mathsf{f}}{{\mathit{n}}}~\,\mathsf{x}~\,{\mathit{N}}} &amp;::=&amp; \mathsf{add} ~|~ \mathsf{sub} ~|~ \mathsf{mul} ~|~ \mathsf{div} ~|~ \mathsf{min} ~|~ \mathsf{max} ~|~ \mathsf{pmin} ~|~ \mathsf{pmax} \\[0.8ex]
+&amp; {{\mathit{vbinop}}}_{{\mathsf{f}}{{\mathit{n}}}~\,\mathsf{x}~\,{\mathit{N}}} &amp;::=&amp; \mathsf{add} ~|~ \mathsf{sub} ~|~ \mathsf{mul} ~|~ \mathsf{div} ~|~ {{\mathsf{min}}{\mathsf{\_}}}{{\mathit{sx}}} ~|~ {{\mathsf{max}}{\mathsf{\_}}}{{\mathit{sx}}} ~|~ \mathsf{pmin} ~|~ \mathsf{pmax} \\[0.8ex]
 &amp; {{\mathit{vtestop}}}_{{\mathsf{i}}{{\mathit{n}}}~\,\mathsf{x}~\,{\mathit{N}}} &amp;::=&amp; \mathsf{all\_true} \\[0.8ex]
 &amp; {{\mathit{vrelop}}}_{{\mathsf{i}}{{\mathit{n}}}~\,\mathsf{x}~\,{\mathit{N}}} &amp;::=&amp; \mathsf{eq} ~|~ \mathsf{ne} ~|~ {\mathsf{lt\_}}{{\mathit{sx}}} ~|~ {\mathsf{gt\_}}{{\mathit{sx}}} ~|~ {\mathsf{le\_}}{{\mathit{sx}}} ~|~ {\mathsf{ge\_}}{{\mathit{sx}}} \\
 &amp; {{\mathit{vrelop}}}_{{\mathsf{f}}{{\mathit{n}}}~\,\mathsf{x}~\,{\mathit{N}}} &amp;::=&amp; \mathsf{eq} ~|~ \mathsf{ne} ~|~ \mathsf{lt} ~|~ \mathsf{gt} ~|~ \mathsf{le} ~|~ \mathsf{ge} \\[0.8ex]
