--- a/core/syntax/types.html
+++ b/core/syntax/types.html
@@ -334,20 +334,20 @@ It filters out entries of a specific kind in an order-preserving fashion:</p>
 <div class="math notranslate nohighlight">
 \[\begin{split}\begin{array}{&#64;{}lcl&#64;{}l&#64;{}}
 {\mathrm{funcs}}(\epsilon) &amp;=&amp; \epsilon &amp;  \\
-{\mathrm{funcs}}((\mathsf{func}~\,{\mathit{dt}})~\,{{\mathit{et}}^\ast}) &amp;=&amp; {\mathit{dt}}~\,{\mathrm{funcs}}({{\mathit{et}}^\ast}) &amp;  \\
-{\mathrm{funcs}}({\mathit{externtype}}~\,{{\mathit{et}}^\ast}) &amp;=&amp; {\mathrm{funcs}}({{\mathit{et}}^\ast}) &amp;\quad
+{\mathrm{funcs}}((\mathsf{func}~\,{\mathit{dt}})~\,{{\mathit{xt}}^\ast}) &amp;=&amp; {\mathit{dt}}~\,{\mathrm{funcs}}({{\mathit{xt}}^\ast}) &amp;  \\
+{\mathrm{funcs}}({\mathit{externtype}}~\,{{\mathit{xt}}^\ast}) &amp;=&amp; {\mathrm{funcs}}({{\mathit{xt}}^\ast}) &amp;\quad
   \mbox{otherwise} \\[0.8ex]
 {\mathrm{tables}}(\epsilon) &amp;=&amp; \epsilon &amp;  \\
-{\mathrm{tables}}((\mathsf{table}~\,{\mathit{tt}})~\,{{\mathit{et}}^\ast}) &amp;=&amp; {\mathit{tt}}~\,{\mathrm{tables}}({{\mathit{et}}^\ast}) &amp;  \\
-{\mathrm{tables}}({\mathit{externtype}}~\,{{\mathit{et}}^\ast}) &amp;=&amp; {\mathrm{tables}}({{\mathit{et}}^\ast}) &amp;\quad
+{\mathrm{tables}}((\mathsf{table}~\,{\mathit{tt}})~\,{{\mathit{xt}}^\ast}) &amp;=&amp; {\mathit{tt}}~\,{\mathrm{tables}}({{\mathit{xt}}^\ast}) &amp;  \\
+{\mathrm{tables}}({\mathit{externtype}}~\,{{\mathit{xt}}^\ast}) &amp;=&amp; {\mathrm{tables}}({{\mathit{xt}}^\ast}) &amp;\quad
   \mbox{otherwise} \\[0.8ex]
 {\mathrm{mems}}(\epsilon) &amp;=&amp; \epsilon &amp;  \\
-{\mathrm{mems}}((\mathsf{mem}~\,{\mathit{mt}})~\,{{\mathit{et}}^\ast}) &amp;=&amp; {\mathit{mt}}~\,{\mathrm{mems}}({{\mathit{et}}^\ast}) &amp;  \\
-{\mathrm{mems}}({\mathit{externtype}}~\,{{\mathit{et}}^\ast}) &amp;=&amp; {\mathrm{mems}}({{\mathit{et}}^\ast}) &amp;\quad
+{\mathrm{mems}}((\mathsf{mem}~\,{\mathit{mt}})~\,{{\mathit{xt}}^\ast}) &amp;=&amp; {\mathit{mt}}~\,{\mathrm{mems}}({{\mathit{xt}}^\ast}) &amp;  \\
+{\mathrm{mems}}({\mathit{externtype}}~\,{{\mathit{xt}}^\ast}) &amp;=&amp; {\mathrm{mems}}({{\mathit{xt}}^\ast}) &amp;\quad
   \mbox{otherwise} \\[0.8ex]
 {\mathrm{globals}}(\epsilon) &amp;=&amp; \epsilon &amp;  \\
-{\mathrm{globals}}((\mathsf{global}~\,{\mathit{gt}})~\,{{\mathit{et}}^\ast}) &amp;=&amp; {\mathit{gt}}~\,{\mathrm{globals}}({{\mathit{et}}^\ast}) &amp;  \\
-{\mathrm{globals}}({\mathit{externtype}}~\,{{\mathit{et}}^\ast}) &amp;=&amp; {\mathrm{globals}}({{\mathit{et}}^\ast}) &amp;\quad
+{\mathrm{globals}}((\mathsf{global}~\,{\mathit{gt}})~\,{{\mathit{xt}}^\ast}) &amp;=&amp; {\mathit{gt}}~\,{\mathrm{globals}}({{\mathit{xt}}^\ast}) &amp;  \\
+{\mathrm{globals}}({\mathit{externtype}}~\,{{\mathit{xt}}^\ast}) &amp;=&amp; {\mathrm{globals}}({{\mathit{xt}}^\ast}) &amp;\quad
   \mbox{otherwise} \\
 \end{array}\end{split}\]</div>
 </section>
