deploy: cddfdca2c41924a185de9b9d17bc02f30b5f92e0

--- a/core/valid/instructions.html
+++ b/core/valid/instructions.html
@@ -2119,7 +2119,7 @@ which is the case for functions not returning anything.</p>
 \[\begin{array}{&#64;{}c&#64;{}}\displaystyle
 \frac{
 }{
-{\mathit{C}} \vdash \epsilon : \epsilon~{\rightarrow}_{}\,\epsilon
+{\mathit{C}} \vdash \epsilon : \epsilon \rightarrow \epsilon
 }
 \qquad
 \end{array}\]</div>
