--- a/core/genindex.html
+++ b/core/genindex.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; WebAssembly 3.0 (Draft 2024-03-21)</title>
+    <title>Index &#8212; WebAssembly 3.0 (Draft 2024-03-25)</title>
     <link rel="stylesheet" type="text/css" href="_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="_static/alabaster.css" />
     <script data-url_root="./" id="documentation_options" src="_static/documentation_options.js"></script>
@@ -722,7 +722,7 @@
       </ul></li>
       <li><a href="intro/introduction.html#index-0">design goals</a>
 </li>
-      <li><a href="exec/instructions.html#index-1">determinism</a>, <a href="exec/numerics.html#index-0">[1]</a>
+      <li><a href="exec/instructions.html#index-2">determinism</a>, <a href="exec/numerics.html#index-0">[1]</a>
 </li>
       <li><a href="exec/types.html#index-0">dynamic type</a>, <a href="exec/types.html#index-1">[1]</a>
 </li>
@@ -1501,7 +1501,7 @@
 </li>
       <li><a href="appendix/custom.html#index-1"><strong>name section</strong></a>, <a href="text/modules.html#index-22">[1]</a>
 </li>
-      <li><a href="syntax/values.html#index-3"><strong>NaN</strong></a>, <a href="exec/instructions.html#index-1">[1]</a>, <a href="exec/numerics.html#index-0">[2]</a>, <a href="exec/numerics.html#index-11">[3]</a>
+      <li><a href="syntax/values.html#index-3"><strong>NaN</strong></a>, <a href="exec/instructions.html#index-2">[1]</a>, <a href="exec/numerics.html#index-0">[2]</a>, <a href="exec/numerics.html#index-11">[3]</a>
 
       <ul>
         <li><a href="syntax/values.html#index-3">arithmetic</a>
@@ -1545,7 +1545,7 @@
         <li><a href="valid/types.html#index-0">validation</a>
 </li>
       </ul></li>
-      <li><a href="syntax/instructions.html#index-2"><strong>numeric instruction</strong></a>, <a href="binary/instructions.html#index-7">[1]</a>, <a href="exec/instructions.html#index-1">[2]</a>, <a href="text/instructions.html#index-8">[3]</a>, <a href="valid/instructions.html#index-2">[4]</a>
+      <li><a href="syntax/instructions.html#index-2"><strong>numeric instruction</strong></a>, <a href="binary/instructions.html#index-7">[1]</a>, <a href="exec/instructions.html#index-2">[2]</a>, <a href="text/instructions.html#index-8">[3]</a>, <a href="valid/instructions.html#index-2">[4]</a>
 </li>
       <li><a href="syntax/values.html#index-4"><strong>numeric vector</strong></a>, <a href="exec/numerics.html#index-1">[1]</a>, <a href="exec/numerics.html#index-4">[2]</a>, <a href="syntax/instructions.html#index-3">[3]</a>
 </li>
@@ -1595,9 +1595,9 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="syntax/instructions.html#index-1"><strong>parametric instruction</strong></a>, <a href="binary/instructions.html#index-3">[1]</a>, <a href="text/instructions.html#index-4">[2]</a>
+      <li><a href="syntax/instructions.html#index-1"><strong>parametric instruction</strong></a>, <a href="binary/instructions.html#index-3">[1]</a>, <a href="exec/instructions.html#index-1">[2]</a>, <a href="text/instructions.html#index-4">[3]</a>
 </li>
-      <li><a href="exec/instructions.html#index-4">parametric instructions</a>, <a href="valid/instructions.html#index-1">[1]</a>
+      <li><a href="valid/instructions.html#index-1">parametric instructions</a>
 </li>
       <li><a href="syntax/modules.html#index-7"><strong>passive</strong></a>, <a href="syntax/modules.html#index-8">[1]</a>
 </li>
@@ -1641,7 +1641,7 @@
       </ul></li>
       <li><a href="exec/conventions.html#index-1"><strong>reduction rules</strong></a>
 </li>
-      <li><a href="appendix/changes.html#index-10">reference</a>, <a href="appendix/changes.html#index-4">[1]</a>, <a href="appendix/changes.html#index-5">[2]</a>, <a href="appendix/changes.html#index-9">[3]</a>, <a href="appendix/embedding.html#index-16">[4]</a>, <a href="appendix/properties.html#index-12">[5]</a>, <a href="exec/instructions.html#index-2">[6]</a>, <a href="exec/instructions.html#index-6">[7]</a>, <a href="exec/runtime.html#index-1">[8]</a>, <a href="syntax/instructions.html#index-4">[9]</a>, <a href="syntax/instructions.html#index-5">[10]</a>, <a href="syntax/types.html#index-4">[11]</a>, <a href="text/instructions.html#index-2">[12]</a>
+      <li><a href="appendix/changes.html#index-10">reference</a>, <a href="appendix/changes.html#index-4">[1]</a>, <a href="appendix/changes.html#index-5">[2]</a>, <a href="appendix/changes.html#index-9">[3]</a>, <a href="appendix/embedding.html#index-16">[4]</a>, <a href="appendix/properties.html#index-12">[5]</a>, <a href="exec/instructions.html#index-3">[6]</a>, <a href="exec/instructions.html#index-6">[7]</a>, <a href="exec/runtime.html#index-1">[8]</a>, <a href="syntax/instructions.html#index-4">[9]</a>, <a href="syntax/instructions.html#index-5">[10]</a>, <a href="syntax/types.html#index-4">[11]</a>, <a href="text/instructions.html#index-2">[12]</a>
 
       <ul>
         <li><a href="syntax/types.html#index-4">type</a>
@@ -1649,7 +1649,7 @@
       </ul></li>
       <li><a href="syntax/instructions.html#index-4"><strong>reference instruction</strong></a>, <a href="binary/instructions.html#index-2">[1]</a>, <a href="syntax/instructions.html#index-5">[2]</a>, <a href="text/instructions.html#index-3">[3]</a>
 </li>
-      <li><a href="exec/instructions.html#index-2">reference instructions</a>, <a href="valid/instructions.html#index-3">[1]</a>
+      <li><a href="exec/instructions.html#index-3">reference instructions</a>, <a href="valid/instructions.html#index-3">[1]</a>
 </li>
       <li><a href="syntax/types.html#index-4"><strong>reference type</strong></a>, <a href="appendix/algorithm.html#index-1">[1]</a>, <a href="appendix/changes.html#index-10">[2]</a>, <a href="appendix/changes.html#index-4">[3]</a>, <a href="appendix/changes.html#index-9">[4]</a>, <a href="appendix/embedding.html#index-16">[5]</a>, <a href="appendix/properties.html#index-2">[6]</a>, <a href="binary/types.html#index-13">[7]</a>, <a href="binary/types.html#index-4">[8]</a>, <a href="binary/types.html#index-5">[9]</a>, <a href="exec/instructions.html#index-6">[10]</a>, <a href="exec/runtime.html#index-1">[11]</a>, <a href="syntax/instructions.html#index-4">[12]</a>, <a href="syntax/instructions.html#index-5">[13]</a>, <a href="syntax/types.html#index-13">[14]</a>, <a href="syntax/types.html#index-5">[15]</a>, <a href="text/modules.html#index-7">[16]</a>, <a href="text/types.html#index-12">[17]</a>, <a href="text/types.html#index-4">[18]</a>, <a href="text/types.html#index-5">[19]</a>, <a href="valid/instructions.html#index-3">[20]</a>, <a href="valid/matching.html#index-4">[21]</a>, <a href="valid/matching.html#index-5">[22]</a>, <a href="valid/modules.html#index-3">[23]</a>, <a href="valid/types.html#index-14">[24]</a>, <a href="valid/types.html#index-3">[25]</a>, <a href="valid/types.html#index-4">[26]</a>
 
@@ -2076,7 +2076,7 @@
 </li>
       <li><a href="text/lexical.html#index-2"><strong>token</strong></a>, <a href="appendix/implementation.html#index-3">[1]</a>
 </li>
-      <li><a href="appendix/changes.html#index-2">trap</a>, <a href="appendix/properties.html#index-24">[1]</a>, <a href="appendix/properties.html#index-4">[2]</a>, <a href="exec/instructions.html#index-1">[3]</a>, <a href="exec/modules.html#index-11">[4]</a>, <a href="exec/modules.html#index-12">[5]</a>, <a href="exec/runtime.html#index-16">[6]</a>, <a href="exec/runtime.html#index-19">[7]</a>, <a href="exec/runtime.html#index-2">[8]</a>, <a href="intro/overview.html#index-0">[9]</a>, <a href="syntax/instructions.html#index-7">[10]</a>, <a href="syntax/instructions.html#index-8">[11]</a>, <a href="syntax/instructions.html#index-9">[12]</a>
+      <li><a href="appendix/changes.html#index-2">trap</a>, <a href="appendix/properties.html#index-24">[1]</a>, <a href="appendix/properties.html#index-4">[2]</a>, <a href="exec/instructions.html#index-2">[3]</a>, <a href="exec/modules.html#index-11">[4]</a>, <a href="exec/modules.html#index-12">[5]</a>, <a href="exec/runtime.html#index-16">[6]</a>, <a href="exec/runtime.html#index-19">[7]</a>, <a href="exec/runtime.html#index-2">[8]</a>, <a href="intro/overview.html#index-0">[9]</a>, <a href="syntax/instructions.html#index-7">[10]</a>, <a href="syntax/instructions.html#index-8">[11]</a>, <a href="syntax/instructions.html#index-9">[12]</a>
 </li>
       <li><a href="binary/values.html#index-2">two&#39;s complement</a>, <a href="exec/numerics.html#index-7">[1]</a>, <a href="intro/overview.html#index-0">[2]</a>, <a href="syntax/instructions.html#index-2">[3]</a>, <a href="syntax/values.html#index-2">[4]</a>
 </li>
@@ -2290,7 +2290,7 @@
 </li>
       <li><a href="valid/conventions.html#index-0">valtype</a>
 </li>
-      <li><a href="exec/runtime.html#index-1"><strong>value</strong></a>, <a href="syntax/values.html#index-0"><strong>[1]</strong></a>, <a href="appendix/embedding.html#index-12">[2]</a>, <a href="appendix/embedding.html#index-15">[3]</a>, <a href="appendix/implementation.html#index-5">[4]</a>, <a href="appendix/properties.html#index-11">[5]</a>, <a href="appendix/properties.html#index-22">[6]</a>, <a href="appendix/properties.html#index-25">[7]</a>, <a href="appendix/properties.html#index-34">[8]</a>, <a href="appendix/properties.html#index-4">[9]</a>, <a href="binary/values.html#index-0">[10]</a>, <a href="exec/instructions.html#index-1">[11]</a>, <a href="exec/instructions.html#index-4">[12]</a>, <a href="exec/instructions.html#index-5">[13]</a>, <a href="exec/instructions.html#index-6">[14]</a>, <a href="exec/instructions.html#index-7">[15]</a>, <a href="exec/modules.html#index-12">[16]</a>, <a href="exec/modules.html#index-5">[17]</a>, <a href="exec/numerics.html#index-0">[18]</a>, <a href="exec/runtime.html#index-19">[19]</a>, <a href="exec/runtime.html#index-2">[20]</a>, <a href="exec/runtime.html#index-9">[21]</a>, <a href="exec/values.html#index-0">[22]</a>, <a href="exec/values.html#index-1">[23]</a>, <a href="intro/overview.html#index-0">[24]</a>, <a href="syntax/instructions.html#index-2">[25]</a>, <a href="syntax/instructions.html#index-3">[26]</a>, <a href="syntax/modules.html#index-6">[27]</a>, <a href="text/values.html#index-0">[28]</a>, <a href="valid/instructions.html#index-0">[29]</a>
+      <li><a href="exec/runtime.html#index-1"><strong>value</strong></a>, <a href="syntax/values.html#index-0"><strong>[1]</strong></a>, <a href="appendix/embedding.html#index-12">[2]</a>, <a href="appendix/embedding.html#index-15">[3]</a>, <a href="appendix/implementation.html#index-5">[4]</a>, <a href="appendix/properties.html#index-11">[5]</a>, <a href="appendix/properties.html#index-22">[6]</a>, <a href="appendix/properties.html#index-25">[7]</a>, <a href="appendix/properties.html#index-34">[8]</a>, <a href="appendix/properties.html#index-4">[9]</a>, <a href="binary/values.html#index-0">[10]</a>, <a href="exec/instructions.html#index-1">[11]</a>, <a href="exec/instructions.html#index-2">[12]</a>, <a href="exec/instructions.html#index-5">[13]</a>, <a href="exec/instructions.html#index-6">[14]</a>, <a href="exec/instructions.html#index-7">[15]</a>, <a href="exec/modules.html#index-12">[16]</a>, <a href="exec/modules.html#index-5">[17]</a>, <a href="exec/numerics.html#index-0">[18]</a>, <a href="exec/runtime.html#index-19">[19]</a>, <a href="exec/runtime.html#index-2">[20]</a>, <a href="exec/runtime.html#index-9">[21]</a>, <a href="exec/values.html#index-0">[22]</a>, <a href="exec/values.html#index-1">[23]</a>, <a href="intro/overview.html#index-0">[24]</a>, <a href="syntax/instructions.html#index-2">[25]</a>, <a href="syntax/instructions.html#index-3">[26]</a>, <a href="syntax/modules.html#index-6">[27]</a>, <a href="text/values.html#index-0">[28]</a>, <a href="valid/instructions.html#index-0">[29]</a>
 
       <ul>
         <li><a href="exec/runtime.html#index-1">abstract syntax</a>, <a href="syntax/values.html#index-0">[1]</a>
@@ -2304,7 +2304,7 @@
         <li><a href="syntax/types.html#index-5">type</a>
 </li>
       </ul></li>
-      <li><a href="syntax/types.html#index-5"><strong>value type</strong></a>, <a href="appendix/algorithm.html#index-1">[1]</a>, <a href="appendix/changes.html#index-3">[2]</a>, <a href="appendix/changes.html#index-4">[3]</a>, <a href="appendix/changes.html#index-8">[4]</a>, <a href="appendix/changes.html#index-9">[5]</a>, <a href="appendix/embedding.html#index-17">[6]</a>, <a href="appendix/properties.html#index-2">[7]</a>, <a href="appendix/properties.html#index-22">[8]</a>, <a href="appendix/properties.html#index-23">[9]</a>, <a href="appendix/properties.html#index-25">[10]</a>, <a href="appendix/properties.html#index-4">[11]</a>, <a href="binary/instructions.html#index-1">[12]</a>, <a href="binary/instructions.html#index-3">[13]</a>, <a href="binary/types.html#index-14">[14]</a>, <a href="binary/types.html#index-5">[15]</a>, <a href="binary/types.html#index-6">[16]</a>, <a href="binary/types.html#index-7">[17]</a>, <a href="binary/types.html#index-8">[18]</a>, <a href="exec/instructions.html#index-1">[19]</a>, <a href="exec/instructions.html#index-7">[20]</a>, <a href="exec/modules.html#index-5">[21]</a>, <a href="exec/numerics.html#index-1">[22]</a>, <a href="exec/runtime.html#index-1">[23]</a>, <a href="exec/values.html#index-1">[24]</a>, <a href="exec/values.html#index-6">[25]</a>, <a href="syntax/instructions.html#index-1">[26]</a>, <a href="syntax/instructions.html#index-2">[27]</a>, <a href="syntax/instructions.html#index-3">[28]</a>, <a href="syntax/instructions.html#index-9">[29]</a>, <a href="syntax/modules.html#index-3">[30]</a>, <a href="syntax/types.html#index-14">[31]</a>, <a href="syntax/types.html#index-6">[32]</a>, <a href="syntax/types.html#index-7">[33]</a>, <a href="text/instructions.html#index-4">[34]</a>, <a href="text/types.html#index-13">[35]</a>, <a href="text/types.html#index-5">[36]</a>, <a href="text/types.html#index-6">[37]</a>, <a href="text/types.html#index-7">[38]</a>, <a href="valid/conventions.html#index-5">[39]</a>, <a href="valid/conventions.html#index-6">[40]</a>, <a href="valid/conventions.html#index-7">[41]</a>, <a href="valid/instructions.html#index-1">[42]</a>, <a href="valid/matching.html#index-10">[43]</a>, <a href="valid/matching.html#index-15">[44]</a>, <a href="valid/matching.html#index-5">[45]</a>, <a href="valid/matching.html#index-6">[46]</a>, <a href="valid/modules.html#index-1">[47]</a>, <a href="valid/modules.html#index-2">[48]</a>, <a href="valid/types.html#index-10">[49]</a>, <a href="valid/types.html#index-16">[50]</a>, <a href="valid/types.html#index-4">[51]</a>, <a href="valid/types.html#index-6">[52]</a>
+      <li><a href="syntax/types.html#index-5"><strong>value type</strong></a>, <a href="appendix/algorithm.html#index-1">[1]</a>, <a href="appendix/changes.html#index-3">[2]</a>, <a href="appendix/changes.html#index-4">[3]</a>, <a href="appendix/changes.html#index-8">[4]</a>, <a href="appendix/changes.html#index-9">[5]</a>, <a href="appendix/embedding.html#index-17">[6]</a>, <a href="appendix/properties.html#index-2">[7]</a>, <a href="appendix/properties.html#index-22">[8]</a>, <a href="appendix/properties.html#index-23">[9]</a>, <a href="appendix/properties.html#index-25">[10]</a>, <a href="appendix/properties.html#index-4">[11]</a>, <a href="binary/instructions.html#index-1">[12]</a>, <a href="binary/instructions.html#index-3">[13]</a>, <a href="binary/types.html#index-14">[14]</a>, <a href="binary/types.html#index-5">[15]</a>, <a href="binary/types.html#index-6">[16]</a>, <a href="binary/types.html#index-7">[17]</a>, <a href="binary/types.html#index-8">[18]</a>, <a href="exec/instructions.html#index-2">[19]</a>, <a href="exec/instructions.html#index-7">[20]</a>, <a href="exec/modules.html#index-5">[21]</a>, <a href="exec/numerics.html#index-1">[22]</a>, <a href="exec/runtime.html#index-1">[23]</a>, <a href="exec/values.html#index-1">[24]</a>, <a href="exec/values.html#index-6">[25]</a>, <a href="syntax/instructions.html#index-1">[26]</a>, <a href="syntax/instructions.html#index-2">[27]</a>, <a href="syntax/instructions.html#index-3">[28]</a>, <a href="syntax/instructions.html#index-9">[29]</a>, <a href="syntax/modules.html#index-3">[30]</a>, <a href="syntax/types.html#index-14">[31]</a>, <a href="syntax/types.html#index-6">[32]</a>, <a href="syntax/types.html#index-7">[33]</a>, <a href="text/instructions.html#index-4">[34]</a>, <a href="text/types.html#index-13">[35]</a>, <a href="text/types.html#index-5">[36]</a>, <a href="text/types.html#index-6">[37]</a>, <a href="text/types.html#index-7">[38]</a>, <a href="valid/conventions.html#index-5">[39]</a>, <a href="valid/conventions.html#index-6">[40]</a>, <a href="valid/conventions.html#index-7">[41]</a>, <a href="valid/instructions.html#index-1">[42]</a>, <a href="valid/matching.html#index-10">[43]</a>, <a href="valid/matching.html#index-15">[44]</a>, <a href="valid/matching.html#index-5">[45]</a>, <a href="valid/matching.html#index-6">[46]</a>, <a href="valid/modules.html#index-1">[47]</a>, <a href="valid/modules.html#index-2">[48]</a>, <a href="valid/types.html#index-10">[49]</a>, <a href="valid/types.html#index-16">[50]</a>, <a href="valid/types.html#index-4">[51]</a>, <a href="valid/types.html#index-6">[52]</a>
 
       <ul>
         <li><a href="syntax/types.html#index-5">abstract syntax</a>, <a href="valid/conventions.html#index-1">[1]</a>
@@ -2327,7 +2327,7 @@
         <li><a href="syntax/values.html#index-4">abstract syntax</a>
 </li>
       </ul></li>
-      <li><a href="syntax/instructions.html#index-3"><strong>vector instruction</strong></a>, <a href="binary/instructions.html#index-8">[1]</a>, <a href="exec/instructions.html#index-3">[2]</a>, <a href="text/instructions.html#index-9">[3]</a>, <a href="valid/instructions.html#index-7">[4]</a>
+      <li><a href="syntax/instructions.html#index-3"><strong>vector instruction</strong></a>, <a href="binary/instructions.html#index-8">[1]</a>, <a href="exec/instructions.html#index-4">[2]</a>, <a href="text/instructions.html#index-9">[3]</a>, <a href="valid/instructions.html#index-7">[4]</a>
 </li>
       <li><a href="exec/runtime.html#index-1">vector number</a>
 </li>
