deploy: e436412295de935510f4083b9fecea55feafcc0d

--- a/core/genindex.html
+++ b/core/genindex.html
@@ -2154,7 +2154,7 @@
       </ul></li>
       <li><a href="valid/conventions.html#index-0"><strong>type system</strong></a>, <a href="appendix/properties.html#index-0">[1]</a>, <a href="appendix/properties.html#index-40">[2]</a>, <a href="appendix/properties.html#index-41">[3]</a>
 </li>
-      <li><a href="text/modules.html#index-1">type use</a>
+      <li><a href="syntax/types.html#index-3"><strong>type use</strong></a>, <a href="text/modules.html#index-1">[1]</a>
 
       <ul>
         <li><a href="text/modules.html#index-1">text format</a>
