--- a/core/syntax/conventions.html
+++ b/core/syntax/conventions.html
@@ -172,7 +172,7 @@ A list can have at most <span class="math notranslate nohighlight">\({2^{32}} - 
 <div class="math notranslate nohighlight">
 \[\begin{split}\begin{array}{&#64;{}l&#64;{}rrl&#64;{}l&#64;{}}
 &amp; {\mathit{list}}({\mathit{X}}) &amp;::=&amp; {{\mathit{X}}^\ast}
-  &amp;\quad \mbox{if}~{|{{\mathit{X}}^\ast}|} &lt; {2^{32}} \\
+  &amp;\qquad \mbox{if}~{|{{\mathit{X}}^\ast}|} &lt; {2^{32}} \\
 \end{array}\end{split}\]</div>
 </section>
 </section>
