--- a/core/syntax/instructions.html
+++ b/core/syntax/instructions.html
@@ -132,7 +132,7 @@ These operations closely match respective operations available in hardware.</p>
 {\mathit{numtype}} . {{\mathit{testop}}}_{{\mathit{numtype}}} \\ &amp;&amp;|&amp;
 {\mathit{numtype}} . {{\mathit{relop}}}_{{\mathit{numtype}}} \\ &amp;&amp;|&amp;
 {\mathit{numtype}}_{{1}} . {{{{{\mathit{cvtop}}}{\mathsf{\_}}}{{\mathit{numtype}}_{{2}}}}{\mathsf{\_}}}{{{\mathit{sx}}^?}}
-  &amp;\quad \mbox{if}~{\mathit{numtype}}_{{1}} \neq {\mathit{numtype}}_{{2}} \\ &amp;&amp;|&amp;
+  &amp;\qquad \mbox{if}~{\mathit{numtype}}_{{1}} \neq {\mathit{numtype}}_{{2}} \\ &amp;&amp;|&amp;
 {{{{\mathit{numtype}}.\mathsf{extend}}{{\mathit{n}}}}{\mathsf{\_}}}{\mathsf{s}} \\ &amp;&amp;|&amp;
 \dots \\[0.8ex]
 &amp; {{\mathit{unop}}}_{{\mathsf{i}}{{\mathit{n}}}} &amp;::=&amp; \mathsf{clz} ~|~ \mathsf{ctz} ~|~ \mathsf{popcnt} ~|~ \mathsf{extend}~{\mathit{n}} \\
@@ -178,12 +178,12 @@ For the other integer instructions, the use of two’s complement for the signed
 {\mathit{vectype}} . {\mathit{vvternop}} \\ &amp;&amp;|&amp;
 {\mathit{vectype}} . {\mathit{vvtestop}} \\ &amp;&amp;|&amp;
 {\mathit{ishape}}.\mathsf{swizzle}
-  &amp;\quad \mbox{if}~{\mathit{ishape}} = {{\mathsf{i{\scriptstyle8}}}{\mathsf{x}}}{\mathsf{{\scriptstyle16}}} \\ &amp;&amp;|&amp;
+  &amp;\qquad \mbox{if}~{\mathit{ishape}} = {{\mathsf{i{\scriptstyle8}}}{\mathsf{x}}}{\mathsf{{\scriptstyle16}}} \\ &amp;&amp;|&amp;
 {\mathit{ishape}}.\mathsf{shuffle}~{{\mathit{laneidx}}^\ast}
-  &amp;\quad \mbox{if}~{\mathit{ishape}} = {{\mathsf{i{\scriptstyle8}}}{\mathsf{x}}}{\mathsf{{\scriptstyle16}}} \land {|{{\mathit{laneidx}}^\ast}|} = 16 \\ &amp;&amp;|&amp;
+  &amp;\qquad \mbox{if}~{\mathit{ishape}} = {{\mathsf{i{\scriptstyle8}}}{\mathsf{x}}}{\mathsf{{\scriptstyle16}}} \land {|{{\mathit{laneidx}}^\ast}|} = 16 \\ &amp;&amp;|&amp;
 {\mathit{shape}}.\mathsf{splat} \\ &amp;&amp;|&amp;
 {{\mathit{shape}}.\mathsf{extract\_lane\_}}{{{\mathit{sx}}^?}}~{\mathit{laneidx}}
-  &amp;\quad \mbox{if}~{\mathrm{lanetype}}({\mathit{shape}}) = {\mathit{numtype}} \Leftrightarrow {{\mathit{sx}}^?} = \epsilon \\ &amp;&amp;|&amp;
+  &amp;\qquad \mbox{if}~{\mathrm{lanetype}}({\mathit{shape}}) = {\mathit{numtype}} \Leftrightarrow {{\mathit{sx}}^?} = \epsilon \\ &amp;&amp;|&amp;
 {\mathit{shape}}.\mathsf{replace\_lane}~{\mathit{laneidx}} \\ &amp;&amp;|&amp;
 {\mathit{shape}} . {{\mathit{vunop}}}_{{\mathit{shape}}} \\ &amp;&amp;|&amp;
 {\mathit{shape}} . {{\mathit{vbinop}}}_{{\mathit{shape}}} \\ &amp;&amp;|&amp;
@@ -193,11 +193,11 @@ For the other integer instructions, the use of two’s complement for the signed
 {\mathit{ishape}}.\mathsf{bitmask} \\ &amp;&amp;|&amp;
 {\mathit{shape}} . {{{{{{{{{\mathit{vcvtop}}}{\mathsf{\_}}}{{{\mathit{half}}^?}}}{\mathsf{\_}}}{{\mathit{shape}}}}{\mathsf{\_}}}{{{\mathit{sx}}^?}}}{\mathsf{\_}}}{{\mathit{zero}}} \\ &amp;&amp;|&amp;
 {{{{{\mathit{ishape}}_{{1}}.\mathsf{narrow}}{\mathsf{\_}}}{{\mathit{ishape}}_{{2}}}}{\mathsf{\_}}}{{\mathit{sx}}}
-  &amp;\quad \mbox{if}~{|{\mathrm{lanetype}}({\mathit{ishape}}_{{2}})|} = 2 \cdot {|{\mathrm{lanetype}}({\mathit{ishape}}_{{1}})|} \leq 32 \\ &amp;&amp;|&amp;
+  &amp;\qquad \mbox{if}~{|{\mathrm{lanetype}}({\mathit{ishape}}_{{2}})|} = 2 \cdot {|{\mathrm{lanetype}}({\mathit{ishape}}_{{1}})|} \leq 32 \\ &amp;&amp;|&amp;
 {\mathit{ishape}}_{{1}} . {{{{{{\mathit{vextunop}}}_{{\mathit{ishape}}_{{1}}, {\mathit{ishape}}_{{2}}}}{\mathsf{\_}}}{{\mathit{ishape}}_{{2}}}}{\mathsf{\_}}}{{\mathit{sx}}}
-  &amp;\quad \mbox{if}~{|{\mathrm{lanetype}}({\mathit{ishape}}_{{1}})|} = 2 \cdot {|{\mathrm{lanetype}}({\mathit{ishape}}_{{2}})|} \\ &amp;&amp;|&amp;
+  &amp;\qquad \mbox{if}~{|{\mathrm{lanetype}}({\mathit{ishape}}_{{1}})|} = 2 \cdot {|{\mathrm{lanetype}}({\mathit{ishape}}_{{2}})|} \\ &amp;&amp;|&amp;
 {\mathit{ishape}}_{{1}} . {{{{{{\mathit{vextbinop}}}_{{\mathit{ishape}}_{{1}}, {\mathit{ishape}}_{{2}}}}{\mathsf{\_}}}{{\mathit{ishape}}_{{2}}}}{\mathsf{\_}}}{{\mathit{sx}}}
-  &amp;\quad \mbox{if}~{|{\mathrm{lanetype}}({\mathit{ishape}}_{{1}})|} = 2 \cdot {|{\mathrm{lanetype}}({\mathit{ishape}}_{{2}})|} \\ &amp;&amp;|&amp;
+  &amp;\qquad \mbox{if}~{|{\mathrm{lanetype}}({\mathit{ishape}}_{{1}})|} = 2 \cdot {|{\mathrm{lanetype}}({\mathit{ishape}}_{{2}})|} \\ &amp;&amp;|&amp;
 \dots \\
 \end{array}\end{split}\]</div>
 <div class="math notranslate nohighlight">
@@ -207,34 +207,34 @@ For the other integer instructions, the use of two’s complement for the signed
 &amp; {\mathit{vvternop}} &amp;::=&amp; \mathsf{bitselect} \\[0.8ex]
 &amp; {\mathit{vvtestop}} &amp;::=&amp; \mathsf{any\_true} \\[0.8ex]
 &amp; {{\mathit{vunop}}}_{{{{\mathsf{i}}{{\mathit{n}}}}{\mathsf{x}}}{{\mathit{N}}}} &amp;::=&amp; \mathsf{abs} ~|~ \mathsf{neg} ~|~ \mathsf{popcnt}
-  &amp;\quad \mbox{if}~{\mathsf{i}}{{\mathit{n}}} = \mathsf{i{\scriptstyle8}} \\
+  &amp;\qquad \mbox{if}~{\mathsf{i}}{{\mathit{n}}} = \mathsf{i{\scriptstyle8}} \\
 &amp; {{\mathit{vunop}}}_{{{{\mathsf{f}}{{\mathit{n}}}}{\mathsf{x}}}{{\mathit{N}}}} &amp;::=&amp; \mathsf{abs} ~|~ \mathsf{neg} ~|~ \mathsf{sqrt} ~|~ \mathsf{ceil} ~|~ \mathsf{floor} ~|~ \mathsf{trunc} ~|~ \mathsf{nearest} \\[0.8ex]
 &amp; {{\mathit{vbinop}}}_{{{{\mathsf{i}}{{\mathit{n}}}}{\mathsf{x}}}{{\mathit{N}}}} &amp;::=&amp; \mathsf{add} \\ &amp;&amp;|&amp;
 \mathsf{sub} \\ &amp;&amp;|&amp;
 {{\mathsf{add\_sat}}{\mathsf{\_}}}{{\mathit{sx}}}
-  &amp;\quad \mbox{if}~{|{\mathsf{i}}{{\mathit{n}}}|} \leq 16 \\ &amp;&amp;|&amp;
+  &amp;\qquad \mbox{if}~{|{\mathsf{i}}{{\mathit{n}}}|} \leq 16 \\ &amp;&amp;|&amp;
 {{\mathsf{sub\_sat}}{\mathsf{\_}}}{{\mathit{sx}}}
-  &amp;\quad \mbox{if}~{|{\mathsf{i}}{{\mathit{n}}}|} \leq 16 \\ &amp;&amp;|&amp;
+  &amp;\qquad \mbox{if}~{|{\mathsf{i}}{{\mathit{n}}}|} \leq 16 \\ &amp;&amp;|&amp;
 \mathsf{mul}
-  &amp;\quad \mbox{if}~{|{\mathsf{i}}{{\mathit{n}}}|} \geq 16 \\ &amp;&amp;|&amp;
+  &amp;\qquad \mbox{if}~{|{\mathsf{i}}{{\mathit{n}}}|} \geq 16 \\ &amp;&amp;|&amp;
 \mathsf{avgr\_u}
-  &amp;\quad \mbox{if}~{|{\mathsf{i}}{{\mathit{n}}}|} \leq 16 \\ &amp;&amp;|&amp;
+  &amp;\qquad \mbox{if}~{|{\mathsf{i}}{{\mathit{n}}}|} \leq 16 \\ &amp;&amp;|&amp;
 \mathsf{q{\scriptstyle15}mulr\_sat\_s}
-  &amp;\quad \mbox{if}~{|{\mathsf{i}}{{\mathit{n}}}|} = 16 \\ &amp;&amp;|&amp;
+  &amp;\qquad \mbox{if}~{|{\mathsf{i}}{{\mathit{n}}}|} = 16 \\ &amp;&amp;|&amp;
 {{\mathsf{min}}{\mathsf{\_}}}{{\mathit{sx}}}
-  &amp;\quad \mbox{if}~{|{\mathsf{i}}{{\mathit{n}}}|} \leq 32 \\ &amp;&amp;|&amp;
+  &amp;\qquad \mbox{if}~{|{\mathsf{i}}{{\mathit{n}}}|} \leq 32 \\ &amp;&amp;|&amp;
 {{\mathsf{max}}{\mathsf{\_}}}{{\mathit{sx}}}
-  &amp;\quad \mbox{if}~{|{\mathsf{i}}{{\mathit{n}}}|} \leq 32 \\
+  &amp;\qquad \mbox{if}~{|{\mathsf{i}}{{\mathit{n}}}|} \leq 32 \\
 &amp; {{\mathit{vbinop}}}_{{{{\mathsf{f}}{{\mathit{n}}}}{\mathsf{x}}}{{\mathit{N}}}} &amp;::=&amp; \mathsf{add} ~|~ \mathsf{sub} ~|~ \mathsf{mul} ~|~ \mathsf{div} ~|~ {{\mathsf{min}}{\mathsf{\_}}}{{\mathit{sx}}} ~|~ {{\mathsf{max}}{\mathsf{\_}}}{{\mathit{sx}}} ~|~ \mathsf{pmin} ~|~ \mathsf{pmax} \\[0.8ex]
 &amp; {{\mathit{vtestop}}}_{{{{\mathsf{i}}{{\mathit{n}}}}{\mathsf{x}}}{{\mathit{N}}}} &amp;::=&amp; \mathsf{all\_true} \\[0.8ex]
 &amp; {{\mathit{vrelop}}}_{{{{\mathsf{i}}{{\mathit{n}}}}{\mathsf{x}}}{{\mathit{N}}}} &amp;::=&amp; \mathsf{eq} ~|~ \mathsf{ne} ~|~ {\mathsf{lt\_}}{{\mathit{sx}}} ~|~ {\mathsf{gt\_}}{{\mathit{sx}}} ~|~ {\mathsf{le\_}}{{\mathit{sx}}} ~|~ {\mathsf{ge\_}}{{\mathit{sx}}} \\
 &amp; {{\mathit{vrelop}}}_{{{{\mathsf{f}}{{\mathit{n}}}}{\mathsf{x}}}{{\mathit{N}}}} &amp;::=&amp; \mathsf{eq} ~|~ \mathsf{ne} ~|~ \mathsf{lt} ~|~ \mathsf{gt} ~|~ \mathsf{le} ~|~ \mathsf{ge} \\[0.8ex]
 &amp; {{\mathit{vshiftop}}}_{{{{\mathsf{i}}{{\mathit{n}}}}{\mathsf{x}}}{{\mathit{N}}}} &amp;::=&amp; \mathsf{shl} ~|~ {\mathsf{shr\_}}{{\mathit{sx}}} \\[0.8ex]
 &amp; {{\mathit{vextunop}}}_{{{{{\mathsf{i}}{{\mathit{n}}}}_{{1}}}{\mathsf{x}}}{{\mathit{N}}_{{1}}}, {{{{\mathsf{i}}{{\mathit{n}}}}_{{2}}}{\mathsf{x}}}{{\mathit{N}}_{{2}}}} &amp;::=&amp; \mathsf{extadd\_pairwise}
-  &amp;\quad \mbox{if}~16 \leq {|{{\mathsf{i}}{{\mathit{n}}}}_{{1}}|} \leq 32 \\[0.8ex]
+  &amp;\qquad \mbox{if}~16 \leq {|{{\mathsf{i}}{{\mathit{n}}}}_{{1}}|} \leq 32 \\[0.8ex]
 &amp; {{\mathit{vextbinop}}}_{{{{{\mathsf{i}}{{\mathit{n}}}}_{{1}}}{\mathsf{x}}}{{\mathit{N}}_{{1}}}, {{{{\mathsf{i}}{{\mathit{n}}}}_{{2}}}{\mathsf{x}}}{{\mathit{N}}_{{2}}}} &amp;::=&amp; {{\mathsf{extmul}}{\mathsf{\_}}}{{\mathit{half}}} \\ &amp;&amp;|&amp;
 \mathsf{dot}
-  &amp;\quad \mbox{if}~{|{{\mathsf{i}}{{\mathit{n}}}}_{{1}}|} = 32 \\
+  &amp;\qquad \mbox{if}~{|{{\mathsf{i}}{{\mathit{n}}}}_{{1}}|} = 32 \\
 \end{array}\end{split}\]</div>
 <div class="math notranslate nohighlight">
 \[\begin{split}\begin{array}{llrl}
@@ -572,9 +572,9 @@ The <span class="math notranslate nohighlight">\(\mathsf{table.init}\)</span> in
 &amp; {\mathit{packsize}} &amp;::=&amp; \mathsf{{\scriptstyle8}} ~|~ \mathsf{{\scriptstyle16}} ~|~ \mathsf{{\scriptstyle32}} ~|~ \mathsf{{\scriptstyle64}} \\[0.8ex]
 &amp; {\mathit{instr}} &amp;::=&amp; \dots \\ &amp;&amp;|&amp;
 {{\mathit{numtype}}.\mathsf{load}}{{({{{\mathit{w}}}{\mathsf{\_}}}{{\mathit{sx}}})^?}}~{\mathit{memidx}}~{\mathit{memop}}
-  &amp;\quad \mbox{if}~({\mathit{numtype}} = {\mathsf{i}}{{\mathit{n}}} \land {\mathit{w}} &lt; {|{\mathsf{i}}{{\mathit{n}}}|})^? \\ &amp;&amp;|&amp;
+  &amp;\qquad \mbox{if}~({\mathit{numtype}} = {\mathsf{i}}{{\mathit{n}}} \land {\mathit{w}} &lt; {|{\mathsf{i}}{{\mathit{n}}}|})^? \\ &amp;&amp;|&amp;
 {{\mathit{numtype}}.\mathsf{store}}{{{\mathit{w}}^?}}~{\mathit{memidx}}~{\mathit{memop}}
-  &amp;\quad \mbox{if}~({\mathit{numtype}} = {\mathsf{i}}{{\mathit{n}}} \land {\mathit{w}} &lt; {|{\mathsf{i}}{{\mathit{n}}}|})^? \\ &amp;&amp;|&amp;
+  &amp;\qquad \mbox{if}~({\mathit{numtype}} = {\mathsf{i}}{{\mathit{n}}} \land {\mathit{w}} &lt; {|{\mathsf{i}}{{\mathit{n}}}|})^? \\ &amp;&amp;|&amp;
 {\mathsf{v{\scriptstyle128}.load}}{{{\mathit{vloadop}}^?}}~{\mathit{memidx}}~{\mathit{memop}} \\ &amp;&amp;|&amp;
 {{{\mathsf{v{\scriptstyle128}.load}}{{\mathit{w}}}}{\mathsf{\_}}}{\mathsf{lane}}~{\mathit{memidx}}~{\mathit{memop}}~{\mathit{laneidx}} \\ &amp;&amp;|&amp;
 \mathsf{v{\scriptstyle128}.store}~{\mathit{memidx}}~{\mathit{memop}} \\ &amp;&amp;|&amp;
@@ -665,12 +665,12 @@ This restriction may be lifted in future versions.</p>
 \mathsf{br\_on\_cast}~{\mathit{labelidx}}~{\mathit{reftype}}~{\mathit{reftype}} \\ &amp;&amp;|&amp;
 \mathsf{br\_on\_cast\_fail}~{\mathit{labelidx}}~{\mathit{reftype}}~{\mathit{reftype}} \\ &amp;&amp;|&amp;
 \mathsf{call}~{\mathit{funcidx}} \\ &amp;&amp;|&amp;
-\mathsf{call\_ref}~{{\mathit{typeidx}}^?} \\ &amp;&amp;|&amp;
-\mathsf{call\_indirect}~{\mathit{tableidx}}~{\mathit{typeidx}} \\ &amp;&amp;|&amp;
+\mathsf{call\_ref}~{\mathit{typeuse}} \\ &amp;&amp;|&amp;
+\mathsf{call\_indirect}~{\mathit{tableidx}}~{\mathit{typeuse}} \\ &amp;&amp;|&amp;
 \mathsf{return} \\ &amp;&amp;|&amp;
 \mathsf{return\_call}~{\mathit{funcidx}} \\ &amp;&amp;|&amp;
-\mathsf{return\_call\_ref}~{{\mathit{typeidx}}^?} \\ &amp;&amp;|&amp;
-\mathsf{return\_call\_indirect}~{\mathit{tableidx}}~{\mathit{typeidx}} \\ &amp;&amp;|&amp;
+\mathsf{return\_call\_ref}~{\mathit{typeuse}} \\ &amp;&amp;|&amp;
+\mathsf{return\_call\_indirect}~{\mathit{tableidx}}~{\mathit{typeuse}} \\ &amp;&amp;|&amp;
 \dots \\
 \end{array}\end{split}\]</div>
 <div class="math notranslate nohighlight">
