--- a/core/genindex.html
+++ b/core/genindex.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; WebAssembly 3.0 (Draft 2024-05-18)</title>
+    <title>Index &#8212; WebAssembly 3.0 (Draft 2024-05-23)</title>
     <link rel="stylesheet" type="text/css" href="_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="_static/alabaster.css" />
     <script data-url_root="./" id="documentation_options" src="_static/documentation_options.js"></script>
@@ -159,6 +159,8 @@
         <li><a href="exec/runtime.html#index-12">export instance</a>
 </li>
         <li><a href="exec/instructions.html#index-12">expression</a>, <a href="syntax/instructions.html#index-10">[1]</a>, <a href="valid/instructions.html#index-13">[2]</a>
+</li>
+        <li><a href="syntax/modules.html#index-10">external index</a>
 </li>
         <li><a href="syntax/types.html#index-15">external type</a>, <a href="valid/types.html#index-17">[1]</a>
 </li>
@@ -806,10 +808,10 @@
         <li><a href="exec/instructions.html#index-1">instruction</a>, <a href="exec/instructions.html#index-2">[1]</a>, <a href="exec/instructions.html#index-3">[2]</a>, <a href="exec/instructions.html#index-4">[3]</a>, <a href="exec/instructions.html#index-5">[4]</a>, <a href="exec/instructions.html#index-6">[5]</a>, <a href="exec/instructions.html#index-7">[6]</a>, <a href="exec/instructions.html#index-8">[7]</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="valid/types.html#index-12">expand</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="valid/conventions.html#index-4"><strong>expansion</strong></a>
 </li>
       <li><a href="exec/numerics.html#index-3">exponent</a>, <a href="syntax/values.html#index-3">[1]</a>
@@ -865,6 +867,12 @@
         <li><a href="syntax/types.html#index-15">type</a>
 </li>
         <li><a href="exec/runtime.html#index-13">value</a>
+</li>
+      </ul></li>
+      <li><a href="syntax/modules.html#index-10">external index</a>
+
+      <ul>
+        <li><a href="syntax/modules.html#index-10">abstract syntax</a>
 </li>
       </ul></li>
       <li><a href="exec/runtime.html#index-1">external reference</a>, <a href="valid/instructions.html#index-6">[1]</a>
