deploy: d98963d3537fce6088b8ab19b4067a64773d338d

--- a/core/valid/instructions.html
+++ b/core/valid/instructions.html
@@ -2211,7 +2211,7 @@ C \href{../valid/instructions.html#valid-instr}{\vdash} {\href{../syntax/instruc
  \qquad
 (C{.}\href{../valid/conventions.html#context}{\mathsf{locals}}{}[x_1] = {\href{../valid/conventions.html#syntax-init}{\mathit{init}}}~t)^\ast
  \qquad
-C{}[{.}\href{../syntax/modules.html#syntax-func}{\mathsf{local}}{}[{x_1^\ast}] = {(\href{../valid/conventions.html#syntax-init}{\mathsf{set}}~t)^\ast}] \href{../valid/instructions.html#valid-instrs}{\vdash} {{\href{../syntax/instructions.html#syntax-instr}{\mathit{instr}}}_2^\ast} : {t_2^\ast}~\mathrel{\href{../valid/conventions.html#syntax-instrtype}{\rightarrow}}~({x_2^\ast})~{t_3^\ast}
+C{}[{.}\href{../syntax/modules.html#syntax-local}{\mathsf{local}}{}[{x_1^\ast}] = {(\href{../valid/conventions.html#syntax-init}{\mathsf{set}}~t)^\ast}] \href{../valid/instructions.html#valid-instrs}{\vdash} {{\href{../syntax/instructions.html#syntax-instr}{\mathit{instr}}}_2^\ast} : {t_2^\ast}~\mathrel{\href{../valid/conventions.html#syntax-instrtype}{\rightarrow}}~({x_2^\ast})~{t_3^\ast}
 }{
 C \href{../valid/instructions.html#valid-instrs}{\vdash} {\href{../syntax/instructions.html#syntax-instr}{\mathit{instr}}}_1~{{\href{../syntax/instructions.html#syntax-instr}{\mathit{instr}}}_2^\ast} : {t_1^\ast}~\mathrel{\href{../valid/conventions.html#syntax-instrtype}{\rightarrow}}~({x_1^\ast}~{x_2^\ast})~{t_3^\ast}
 }
